--- a/JavaRushPlugin.properties
+++ b/JavaRushPlugin.properties
@@ -1,9 +1,9 @@
-#Wed May 23 15:46:11 MSK 2018
+#Sat May 26 12:25:26 MSK 2018
 javarush.query.filter=
 javarush.quest.filter=QUEST_JAVA_MULTITHREADING
 javarush.status.filter=ASSIGNED
-javarush.last.task.key=com.javarush.task.task29.task2910
+javarush.last.task.key=com.javarush.task.task27.task2712.big10
+javarush.last.task.path=C\:/Users/mr_ma/Documents/Dasha/jv/JavaRushTasks/3.JavaMultithreading/src/com/javarush/task/task27/task2712
 javarush.user.secretkey=6d45ef53-c6e2-4023-a603-7739ae4d8d9f
-javarush.last.task.path=C\:/Users/mr_ma/Documents/Dasha/jv/JavaRushTasks/3.JavaMultithreading/src/com/javarush/task/task29/task2910
 javarush.skip.set.autoscrolls=true
 javarush.level.filter=-1
