--- a/JavaRushPlugin.properties
+++ b/JavaRushPlugin.properties
@@ -1,9 +1,9 @@
-#Mon Jun 18 14:52:51 MSK 2018
+#Thu Jun 21 17:11:33 MSK 2018
 javarush.query.filter=
 javarush.quest.filter=QUEST_JAVA_MULTITHREADING
 javarush.status.filter=ASSIGNED
-javarush.last.task.key=com.javarush.task.task27.task2712.big15
-javarush.last.task.path=C\:/Users/mr_ma/Documents/Dasha/jv/JavaRushTasks/3.JavaMultithreading/src/com/javarush/task/task27/task2712
+javarush.last.task.key=com.javarush.task.task30.task3013
+javarush.last.task.path=C\:/Users/mr_ma/Documents/Dasha/jv/JavaRushTasks/3.JavaMultithreading/src/com/javarush/task/task30/task3013
 javarush.user.secretkey=6d45ef53-c6e2-4023-a603-7739ae4d8d9f
 javarush.skip.set.autoscrolls=true
-javarush.level.filter=9
+javarush.level.filter=10
