--- a/JavaRushPlugin.properties
+++ b/JavaRushPlugin.properties
@@ -1,9 +1,9 @@
-#Mon Jun 25 15:51:27 MSK 2018
+#Tue Jul 03 16:20:42 MSK 2018
 javarush.query.filter=
-javarush.quest.filter=QUEST_JAVA_MULTITHREADING
-javarush.status.filter=ASSIGNED
-javarush.last.task.key=com.javarush.task.task30.task3011
-javarush.last.task.path=C\:/Users/mr_ma/Documents/Dasha/jv/JavaRushTasks/3.JavaMultithreading/src/com/javarush/task/task30/task3011
+javarush.quest.filter=ALL_QUESTS
+javarush.status.filter=IN_PROGRESS
+javarush.last.task.key=com.javarush.task.task39.task3909
 javarush.user.secretkey=6d45ef53-c6e2-4023-a603-7739ae4d8d9f
+javarush.last.task.path=C\:/Users/mr_ma/Documents/Dasha/jv/JavaRushTasks/4.JavaCollections/src/com/javarush/task/task39/task3909
 javarush.skip.set.autoscrolls=true
-javarush.level.filter=10
+javarush.level.filter=-1
